problem-1 fixed bug when i > j but pair would still be shown. OutOfMemory when max range